Destination Snowflake: cleaning up unused code paths (#38553)